@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-11 DP  1.8.1  Check that functions exist before debugging or setting
+                      global breakpoints on them. Remove them from the treeview
+                      if not.
 2007-12-11 DP  1.8.1  Correct the URL for the EDB public synonym help page
 2007-12-10 DP  1.8.1  Handle the corner case when a user includes quotes in an
                       object name (backport of 2007-10-26 fix applied to trunk)
